# image-analyzer

./: .env  .gitignore  README.md  app.py  pyproject.toml
api/: __init__.py  app.py  config.cfg  image.db
api/controllers/: image.py
api/models/: detected_object.py  image.py  object_in_image.py
api/schemas/: image.py
api/services/: image_service.py  vision.py  vision_service.py
api/tests/: conftest.py
api/tests/controllers/: test_image.py
api/tests/schemas/: test_image.py
migrations/versions/: 304f2c8bb6c8_create_initial_tables.py  44a1e25de999_create_required_tables.py  7bd0ac88a60d_create_required_tables.py
