[tool.poetry]
name = "image-analyzer"
version = "0.1.0"
description = "A REST API that detects objects in an image and stores the data."
authors = ["Yung Lai"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv="^0.19.2"
flask-rebar = "^2.1.1"
flask-sqlalchemy = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
